--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,13 @@
+Changes for v1.22
+- More progress on Protocol Editor
+- RM Images and Maps v1.21 from Nils
+- Added GXB protocol (thanks johnsfine)
+- Modified Streamzap protocol to be compatible with decodes (thanks johnsfine)
+- Added 56Khz version of Streamzap (thanks johnsfine)
+- Added Somfy (thanks johnsfine)
+- Fixes for Pioneer Mix protocol
+- Fixed startup problems when UpgradePath in properties file points to a drive that doesn't exist
+
 Changes for v1.21
 - Improvements to phantom button support on Layout panel
 - Fix bug with entering OBCs on Functions panel for some protocols
