--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.26
+- Fix bug importing upgrade using manual settings and hex commands
+
 Changes for v1.25
 - Add variant 3 of Pioneer MIX protocol
 - More fixes for importing External Functions
