--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.27
+- Added ability to import raw device upgrades.
+
 Changes for v1.26
 - Fix bug importing upgrade using manual settings and hex commands
 
