--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.28
+- Automatically pick a remote when importing a KM upgrade.
+
 Changes for v1.27
 - Added ability to import raw device upgrades.
 
