--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes for v1.29
+- Improve matching remotes when loading of KM (and old RM) upgrades, requires RDFs v1.24 or later.
+- RM images and maps v1.24
+
 Changes for v1.28
 - Automatically pick a remote when importing a KM upgrade.
 
