*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@584 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.34a
+- More fixes for binary upgrade files (for Slingbox).
+
 Changes for v1.34
 - Fixes for binary upgrade files (for Slingbox).
 
