--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes for v1.40
+- Only change column widths when protocol changes
+- Fix default value for Fijitsu Sub-Device
+
 Changes for v1.39
 - Some more progress on Protocol Editor
 - Add Fujitsu variants
