--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.48
+- Fix for importing raw or binary upgrades that use an unknown/manual protocol.
+
 Changes for v1.47
 - Fix bug in loading Device Combiner upgrades.
 
