Fixed importing KM files with more than 4 device parms Fixed raw/binary import issues with digit maps
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@621 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+Changes for v1.62
+- Fixed importing of KM upgrades that have more than 4 device parms
+- Fixed problem with digitmaps when importing raw/binary upgrades
+
 Changes for v1.61
 - Fixes for Linux
 
