*** empty log message ***
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@630 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.67
+- Fix Device Combiner upgrades that use protocols with Alternate PIDs
+
 Changes for v1.66
 - Reinstate Device Combiner support
 - Another "don't abort import of .IR files that use Fav/Scan" fix.
