--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v1.75
+- Allow user to revert to previous protocol when there are errors converting functions to the newly selected protocol, preserving the function details.
+
 Changes for v1.74
 - Fix NullPointerException when changing remote to a remote that doesn't support any variant of the current protocol.
 
