--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changed for v1.81
+- RMIR: add JP1 Parallel port interface (Windows and Linux).  Requires administrator (Windows) or superuser (Linux) privileges.
+
 Changes for v1.80
 - Fix for ReplayTV (Official) and unit code
 - Fix for TiVo (Official 2-byte)
