--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -2,6 +2,8 @@ Changed for v1.83
 - Fix for using custom function names
 - Make RM terminate when closed
 - RMIR: enable other port entry in port selection dialog
+- Update digitmaps through 430
+- Fix support for device type specific images
 
 Changed for v1.82
 - Fix for importing KM files with HCS08 protocol code.
