- Fix Sony20 and Sony Combo (12/20) - Update protocol notes (thanks Capn!) - RMIR: Add support for JP1 USB interface (Windows only) - RMIR: Add support for "other" ports - RMIR: Bring JP1.x USB/Serial support up to date - RMIR: Fix endian issues - Enable S3F80 processors to use S3C80 code for Device Combiner
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@693 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,12 @@
+Changes for v1.84
+- Fix Sony20 and Sony Combo (12/20)
+- Update protocol notes (thanks Capn!)
+- RMIR: Add support for JP1 USB interface (Windows only)
+- RMIR: Add support for "other" ports
+- RMIR: Bring JP1.x USB/Serial support up to date
+- RMIR: Fix endian issues
+- Enable S3F80 processors to use S3C80 code for Device Combiner
+
 Changed for v1.83
 - Fix for using custom function names
 - Make RM terminate when closed
