--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,8 @@
+Changed for v1.85
+- Improve importing of raw NEC upgrades
+- RMIR: General improvements to parsing remote images
+- Fix uploading through USB JP1 interface 
+
 Changes for v1.84
 - Fix Sony20 and Sony Combo (12/20)
 - Update protocol notes (thanks Capn!)
