--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,31 @@
+Changes for v1.91
+- RM: 
+  - Make protocol upgrade code available but invisible when not required
+  - Allow HTML in the protocol notes (triggered when the first character in the notes is '<')
+  - Expand notes for DirecTV protocol to explain relationship between Device Number and Remote Address
+  - Show number of bytes used for device, key moves, and protocol
+- RMIR:
+  - Upgrade jp1parallel communication library to 0.02
+  - Upgrade jp12serial/usb communication library to 0.13
+  - When downloading from the remote, and the remote signature matches the signature of the current remote, assume it's the same remote.
+  - Don't show action icons in the menus, only in the tool bar
+  - Add "Verify uploads" option
+  - Improve tracking of bytes used/available for advanced functions, upgrades, and learned signals
+  - Remove need for dummy special protocol device and protocol upgrades (such as DSM in the 6131 and Atlas SA_7 extender)
+    This uses some of the new RDF v4 syntax from IR 8.0x, which makes the RDF incompatible with IR 7.x.
+    In the [SpecialProtocols] section use DSM=TV/1103:01FC and add a [SetupCodes] sections with 01 = 1103
+
+Changes for v1.90
+- Fix bug in special protocol dialog for protocols that use the 2nd column of functions.
+- Improvements for poorly learned/decoded IR signals
+- Fix column widths and header height in learned signals
+- Better error handling for unsupported versions of interface libraries/DLLs
+- Add duration control to Dish Network Combo as a device parameter encoded in the protocol code.
+- Show protocol code even when not required (when available)
+- Make protocol code required when there's an encoded device parameter with a non-default value.
+- RMIR: Add Edit button under device buttons on General tab to edit the device upgrade for the assigned setup code.
+- RMIR: Update the jp12serial interface .dll/.so to version 0.11   
+
 Changes for v1.89
 - Improvements to import raw upgrade
 - Fix Device Combiner for HCS08 remotes
