--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,8 @@
 Changes for v1.96
 - Fix for importing old KM upgrades
+- Add CanalSat protocol
+- Fix for importing KM Aiwa upgrades with device > 255
+- Fix for importing KM GI 4DTV Protocol upgrades
 
 Changes for v1.95
 - Fix for importing KM upgrades that use RC-5/5x Combo
