--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,8 @@
 Changes for v1.98
 - Enable setup codes up to 4095 for remotes that use 2-byte PIDs
 - Tweak column widths
+- Allow comments in image map files
+- Fix heap usage when viewing LOTS of remote images
 - RMIR:
   - Fix jp12 serial driver for 64-bit Linux
   - Fix for macros when AdvCodeBindFormat=LONG
@@ -15,6 +17,7 @@ Changes for v1.98
   - Option to show remote signature
   - Added HCS08 support for Pause protocol
   - Fix for setting protocol parameters
+  - Fix for Device Combiner (2)
 
 Changes for v1.97
 - Fix Unicode characters in string literals
