--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,7 @@
 Changes for v1.99preview3
 - Add support for notes on device buttons
 - Add new protocols and translators
+- Add draggable divider to RMs Buttons panel along the left edge of the Available Functions
 
 Changes for v1.99preview2
 - Make editable table cells enter edit mode when single-clicked, and auto-select the contents
